[tool.poetry]
name = "AsyncBasic"
version = "0.1.0"
description = "AsyncBasic, known by its abbreviated form AB or ABas, embodies a sophisticated amalgamation of the BASIC programming language, replete with asynchronous capabilities, intertwined with the commanding attributes of Bash scripting, firmly grounded upon the bedrock of QBasic."
authors = ["py660 <raspberrypy660@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
